# scipy

scipy/: meson.build
scipy/hierarchical/: __init__.py  _basic.py  _hodlr.py  _partition.py  _sif.py  meson.build
scipy/hierarchical/egrss/: __init__.py  _basic.py  _decomp_cholesky.py  _egrpack.py  basic.py  egrss.py  egrss.pyf.src  meson.build
scipy/hierarchical/egrss/src/: dpotrf.f  dtrmm.f  dtrmm.f90  dtrmv.f  dtrmv.f90  dtrsm.f  dtrsm.f90  dtrsv.f  dtrsv.f90  dtrtrs.f  fib.f
scipy/hierarchical/egrss/tests/: meson.build  test_basic.py  test_decomp_cholesky.py
scipy/hierarchical/linalg/: __init__.py  _basic.py  _decomp_cholesky.py  meson.build
scipy/hierarchical/operator/: __init__.py  _utils.py  meson.build  operator.py  utils.py
scipy/hierarchical/operator/randalg/: __init__.py  _decomp_rsvds.py  decomp_rsvds.py  meson.build
scipy/hierarchical/operator/tests/: meson.build  test_utils.py
scipy/hierarchical/src/egrss/: dpotrf.c
scipy/hierarchical/src/hodlr/: hodlr.h
scipy/hierarchical/tests/: meson.build
